k8s/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/hostname: infra-argocd.vinlab.org
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: infra-argocd.vinlab.org
      http:
        paths:
          - backend:
              service:
                name: argocd-server-tailscale
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - infra-argocd.vinlab.org
      secretName: defaultcert
